# Portfolio-GenAISyntheticDataCreator

./: .dockerignore  .env.example  Dockerfile  README.md  REALISM_REVIEW.md  create_data.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
config/: __init__.py  logging_config.py  settings.py
examples/: Employee_Information_100x10.csv  Financial_Transactions_100x10.csv  Product_Catalogue_100x10.csv  Sales_Figures_100x10.csv  Sales_Orders_100x10.csv
generators/: __init__.py  constants.py  data_generator.py  document_generator.py  employee_generator.py  excel_generator.py  llm_utils.py  product_generator.py  sales_generator.py  schema_templates.py  validators.py  value_generators.py
tests/: test_document_cleaning.py  test_markdown_conversion.py
ui/: __init__.py  interface.py
utils/: __init__.py  helpers.py  product_constraints.py
