[project]
name = "portfolio-genaisyntheticdatacreator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.0.0,<6.0.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "reportlab>=4.0.0",
]
